# Misfit_core

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  draft.ipynb  flake.nix  main.py  pyproject.toml  runtest.py  setup.py
brainstorm hackaton obsidian/: draft excalidraw.md  fake bitcoin.md
misfit_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python_draft/: breakecampous.py  cli.py  inputuser.py  interface.py  main.py  splitblock.py  tests.py
rust_draft/src/: Cargo.toml  block.rs  main.rs  sha256.rs
src/: api.rs  bcli.py  block.rs  cli.rs  createblock.py  createtx.py  lib.rs  main.rs  misfit_core.py  mod.rs  sha256.rs  stolled.py  test_case.py  test_func.py  tests.rs  tools.py  utils.py
src/block/: generator.rs  mod.rs
src/block/random/: bits.rs  block.rs  header.rs  merkle_root.rs  mod.rs  version.rs
src/breakers/: block_breaker.rs  decoder_tools.rs  mod.rs  transaction_breaker.rs
src/breakers/block/: bits.rs  block.rs  decoder_tools.rs  header.rs  merkle_root.rs  mod.rs  version.rs
src/breakers/transaction/: decoder_tools.rs  flags.rs  input.rs  locktime.rs  mod.rs  output.rs  script.rs  transaction.rs  version.rs
src/commands/: createblock.rs  createtx.py
src/generator/: breaker.rs  generate_blocks.rs  generate_tx.rs  generator.rs  mod.rs
src/regtest_pack/: mod.rs  regtest.rs
src/tests/: createtx-test.py  test_cratetx.py  tests1.py  tests2-test.py  tests2.py  utils-test.py
src/transaction/: generator.rs  mod.rs
src/transaction/random/: input.rs  locktime.rs  mod.rs  output.rs  script.rs  taproot.rs  transaction.rs  (+2 more)
