[package]
name = "misfit_core"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
bitcoin = { version = "0.32.5", features = ["std", "rand", "rand-std"] }
secp256k1 = { version = "0.27", features = ["rand-std"] }
rand = "0.9.0"
hex = "=0.4.3"
sha2 = "0.10.8"
indicatif = "0.17.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
